fixed being able to horizontal scroll and seeing the hamburger menu on the side even when not opened

--- a/style/mediaqueries/everyPage.css
+++ b/style/mediaqueries/everyPage.css
@@ -55,7 +55,7 @@
         display: none;
         z-index: 2;
         
-        position: absolute;
+        position: fixed;
         top: 0px;
         left: 0px;
 
@@ -65,7 +65,7 @@
     } #menuHamburger {
         z-index: 2;
 
-        position: absolute;
+        position: fixed;
         top: 0%;
         right: -45%;
 
